# oidcrs

./: Cargo.toml  LICENSE.txt  Makefile  README.md
scripts/: githooks.sh
scripts/githooks/: pre-commit  pre-commit.sh
src/: authentication.rs  config.rs  id_token.rs  lib.rs
src/oauth2/: access_token.rs
src/oidc/: authentication.rs  discovery.rs  id_token.rs  mod.rs
