[package]
name = "oidcrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98" }
base64 = "0.22.1"
chrono = { version = "0.4.41" }
derive_more = { version = "2.0.1", features = ["display"] }
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = { version = "0.1.41" }
url = { version = "2.5.4" }

[dev-dependencies]
pretty_assertions = "1.4.1"
