[package]
name = "oidcrs"
authors = ["Cristian A. Enguídanos Nebot <cristian.enguidanos.nebot@gmail.com>"]
description = "Full Spec Compliant OIDC Library"
version = "0.1.1"
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
license-file = "LICENSE.txt"
repository = "https://github.com/enguidanos-soluciones-web/oidcrs"
keywords = ["oidc", "oauth", "rfc"]
categories = ["api-bindings", "asynchronous", "authentication"]
exclude = ["Makefile", "scripts"]

[dependencies]
anyhow = { version = "1.0.98" }
base64 = "0.22.1"
chrono = { version = "0.4.41" }
derive_more = { version = "2.0.1", features = ["display"] }
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = { version = "0.1.41" }
url = { version = "2.5.4" }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.rust]
unsafe_code = "forbid"
